JAXB for marshalling and unmarshalling